Added the functionality of adding new guides, and loading then adn opening the guides in a browers since the files are saved as PDF files. The guides are also sent to the database and pulled from it IF needed.

--- a/ElearningApp/ElearningApp/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/MainWindow.xaml
@@ -6,8 +6,34 @@
         xmlns:local="clr-namespace:ElearningApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        <Button x:Name="GetAllGuides" Content="Button" HorizontalAlignment="Left" Margin="266,173,0,0" VerticalAlignment="Top" Click="GetAllGuides_Click"/>
+    <TabControl x:Name="TabController" TabStripPlacement="Left">
+        <TabControl.Background>
+            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                <GradientStop Color="Black"/>
+                <GradientStop Color="#FFC80000" Offset="0.75"/>
+            </LinearGradientBrush>
+        </TabControl.Background>
+        <TabItem x:Name="HomeTab" Header="Home">
+            <Grid>
+                <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="25,25,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
+                <Button x:Name="GuideOneButton" Content="Chili Installation" HorizontalAlignment="Left" Margin="75,100,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="GuideOneButton_Click"/>
+                <Button x:Name="GuideTwoButton" Content="GuideTwo" HorizontalAlignment="Left" Margin="350,100,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+                <Button x:Name="GuideThreeButton" Content="GuideThree" HorizontalAlignment="Left" Margin="75,200,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+                <Button x:Name="GuideFourButton" Content="GuideFour" HorizontalAlignment="Left" Margin="350,200,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+            </Grid>
+        </TabItem>
+        <TabItem x:Name="OverviewTab" Header="Overview">
 
-    </Grid>
+        </TabItem>
+        <TabItem x:Name="AdminTab" Header="Admin">
+            <Grid>
+                <Label x:Name="GuideNameLabel" Content="Guide Name:" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="25,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Label x:Name="FileLocationLabel" Content="File Location" HorizontalAlignment="Left" Margin="25,75,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <TextBox x:Name="FileLocation" HorizontalAlignment="Left" Margin="25,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Button x:Name="FileExplorerOpenButton" Content="Open" HorizontalAlignment="Left" Margin="25,125,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
+                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="225,125,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
+            </Grid>
+        </TabItem>
+    </TabControl>
 </Window>
