--- a/ElearningApp/ElearningApp/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/MainWindow.xaml
@@ -6,34 +6,34 @@
         xmlns:local="clr-namespace:ElearningApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <TabControl x:Name="TabController" TabStripPlacement="Left">
+    <TabControl x:Name="TabController" TabStripPlacement="Left" Margin="-59,0,0,0">
         <TabControl.Background>
             <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
                 <GradientStop Color="Black"/>
                 <GradientStop Color="#FFC80000" Offset="0.75"/>
             </LinearGradientBrush>
         </TabControl.Background>
-        <TabItem x:Name="HomeTab" Header="Hjem">
-            <Grid>
-                <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="325,25,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
-                <Button x:Name="GuideOneButton" Content="Chili Installation" HorizontalAlignment="Left" Margin="150,100,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="GuideOneButton_Click"/>
-                <Button x:Name="GuideTwoButton" Content="GuideTwo" HorizontalAlignment="Left" Margin="400,100,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
-                <Button x:Name="GuideThreeButton" Content="GuideThree" HorizontalAlignment="Left" Margin="150,200,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
-                <Button x:Name="GuideFourButton" Content="GuideFour" HorizontalAlignment="Left" Margin="400,200,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
-                <Image x:Name="ChiliLogo" HorizontalAlignment="Left" Height="100" Margin="25,10,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
+        <TabItem x:Name="HomeTab" Header="Hjem" Margin="96,162,-96,-162">
+            <Grid Margin="0,-5,0,-2">
+                <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="446,29,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
+                <Button x:Name="GuideOneButton" Content="Chili Installation" HorizontalAlignment="Left" Margin="254,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="GuideOneButton_Click"/>
+                <Button x:Name="GuideTwoButton" Content="GuideTwo" HorizontalAlignment="Left" Margin="531,133,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+                <Button x:Name="GuideThreeButton" Content="GuideThree" HorizontalAlignment="Left" Margin="254,303,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+                <Button x:Name="GuideFourButton" Content="GuideFour" HorizontalAlignment="Left" Margin="531,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White"/>
+                <Rectangle HorizontalAlignment="Left" Height="444" Margin="-14,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
+                <Image x:Name="ChiliLogo" HorizontalAlignment="Left" Height="100" Margin="21,10,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
             </Grid>
         </TabItem>
-        <TabItem x:Name="OverviewTab" Header="Oversigt">
-
-        </TabItem>
-        <TabItem x:Name="AdminTab" Header="Admin">
-            <Grid>
-                <Label x:Name="GuideNameLabel" Content="Guide Navn:" HorizontalAlignment="Left" Margin="25,25,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="25,50,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Label x:Name="FileLocationLabel" Content="Fil Lokation" HorizontalAlignment="Left" Margin="25,75,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="FileLocation" HorizontalAlignment="Left" Margin="25,100,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Button x:Name="FileExplorerOpenButton" Content="Vælg fil" HorizontalAlignment="Left" Margin="25,125,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
-                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="225,125,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
+        <TabItem x:Name="AdminTab" Header="Admin" Margin="96,300,-96,-304">
+            <Grid Margin="0,-15,0,-2">
+                <Label x:Name="GuideNameLabel" Content="Guide Navn:" HorizontalAlignment="Left" Margin="200,44,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="200,75,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Label x:Name="FileLocationLabel" Content="Fil Lokation" HorizontalAlignment="Left" Margin="204,109,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <TextBox x:Name="FileLocation" HorizontalAlignment="Left" Margin="200,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Button x:Name="FileExplorerOpenButton" Content="Vælg fil" HorizontalAlignment="Left" Margin="200,179,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
+                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="402,179,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
+                <Rectangle HorizontalAlignment="Left" Height="432" Margin="-14,22,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
+                <Image x:Name="ChiliLogo_Copy" HorizontalAlignment="Left" Height="100" Margin="21,20,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
             </Grid>
         </TabItem>
     </TabControl>
