Finished implementing Guide Grouping, every guide is now grouped by the category parameter (Chili, EWII, ENERGIFYN, FlatPay) and the given categories sub menues can only see their given guides.

--- a/ElearningApp/ElearningApp/View/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/View/MainWindow.xaml
@@ -27,13 +27,19 @@
         <TabItem x:Name="AdminTab" Header="Admin" Margin="72,300,-112,-304">
             <Grid Margin="0,-15,0,-2">
                 <Label x:Name="GuideNameLabel" Content="Guide Navn:" HorizontalAlignment="Left" Margin="200,44,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="200,75,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Label x:Name="FileLocationLabel" Content="Fil Lokation" HorizontalAlignment="Left" Margin="204,109,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="FilePath" HorizontalAlignment="Left" Margin="200,135,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Button x:Name="FileExplorerOpenButton" Content="Vælg fil" HorizontalAlignment="Left" Margin="200,179,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
-                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="402,179,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
+                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="200,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Label x:Name="FileLocationLabel" Content="Fil Lokation" HorizontalAlignment="Left" Margin="200,174,0,0" VerticalAlignment="Top" Foreground="White"/>
+                <TextBox x:Name="FilePath" HorizontalAlignment="Left" Margin="200,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
+                <Button x:Name="FileExplorerOpenButton" Content="Vælg fil" HorizontalAlignment="Left" Margin="200,223,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
+                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="400,223,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
                 <Rectangle HorizontalAlignment="Left" Height="432" Margin="-14,22,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
                 <Image x:Name="ChiliLogo_Copy" HorizontalAlignment="Left" Height="100" Margin="21,20,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
+                <ComboBox x:Name="GuideCategoryComboBox" HorizontalAlignment="Left" Margin="200,147,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="ComboBox_SelectionChanged">
+                    <ComboBoxItem>Chili</ComboBoxItem>
+                    <ComboBoxItem>EWII</ComboBoxItem>
+                    <ComboBoxItem>EnergiFyn</ComboBoxItem>
+                    <ComboBoxItem>FlatPay</ComboBoxItem>
+                </ComboBox>
             </Grid>
         </TabItem>
     </TabControl>
