--- a/ElearningApp/ElearningApp/View/ChiliWindow.xaml
+++ b/ElearningApp/ElearningApp/View/ChiliWindow.xaml
@@ -17,7 +17,7 @@
             </ListBox>
         </Grid>
         <Grid Margin="303,10,10,10">
-            <Button x:Name="openSelectedPdfButton" Content="OPEN" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="100" Height="50" Click="openSelectedPdfButton_Click"/>
+            <Button x:Name="openSelectedPdfButton" Click="OpenSelectedPdfButton_Click" Content="OPEN" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="100" Height="50"/>
 
         </Grid>
     </Grid>
