Added Quiz Model, Repository, QuizViewModel and Updated stuff for it to work properly. Also slightly changed XAML code here and there, but most importantly created the Datacontext binding successfully for the quiz window based on which Guide category it is. PDF files and quiz can technically be moved window by window and still function together.

--- a/ElearningApp/ElearningApp/View/EWIIWindow.xaml
+++ b/ElearningApp/ElearningApp/View/EWIIWindow.xaml
@@ -17,8 +17,8 @@
             </ListBox>
         </Grid>
         <Grid Margin="303,10,10,10">
-            <Button x:Name="openSelectedPdfButton" Click="OpenSelectedPdfButton_Click" Content="OPEN" HorizontalAlignment="Center" Margin="0,300,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="100" Height="50"/>
-
+            <Button x:Name="openSelectedPdfButton" Click="OpenSelectedPdfButton_Click" Content="OPEN" HorizontalAlignment="Left" Margin="308,309,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="100" Height="50"/>
+            <Button x:Name="openSelectedPdfQuizButton" Click="openSelectedPdfQuizButton_Click" Content="Quiz" HorizontalAlignment="Left" Margin="78,309,0,0" VerticalAlignment="Top" Width="100" Height="50" FontWeight="Bold"/>
         </Grid>
     </Grid>
 </Window>
