--- a/ElearningApp/ElearningApp/View/ChiliWindow.xaml
+++ b/ElearningApp/ElearningApp/View/ChiliWindow.xaml
@@ -18,7 +18,7 @@
         </Grid>
         <Grid Margin="303,10,10,10">
             <Button x:Name="openSelectedPdfButton" Click="OpenSelectedPdfButton_Click" Content="OPEN" HorizontalAlignment="Left" Margin="298,309,0,0" VerticalAlignment="Top" FontWeight="Bold" Width="100" Height="50"/>
-            <Button x:Name="openSelectedPdfQuizButton" Click="openSelectedPdfQuizButton_Click" Content="Quiz" HorizontalAlignment="Left" Margin="78,309,0,0" VerticalAlignment="Top" Width="100" Height="50" FontWeight="Bold"/>
+            <Button x:Name="openQuizButton" Click="OpenQuizButton_Click" Content="Quiz" HorizontalAlignment="Left" Margin="78,309,0,0" VerticalAlignment="Top" Width="100" Height="50" FontWeight="Bold"/>
         </Grid>
     </Grid>
 </Window>
