--- a/ElearningApp/ElearningApp/View/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/View/MainWindow.xaml
@@ -6,41 +6,34 @@
         xmlns:local="clr-namespace:ElearningApp"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <TabControl x:Name="TabController" TabStripPlacement="Left" Margin="-59,0,0,0">
-        <TabControl.Background>
-            <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                <GradientStop Color="Black"/>
-                <GradientStop Color="#e21643" Offset="1"/>
-            </LinearGradientBrush>
-        </TabControl.Background>
-        <TabItem x:Name="HomeTab" Header="Hjem" Margin="74,162,-112,-162">
-            <Grid Margin="0,-5,0,-2">
-                <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="436,29,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
-                <Button x:Name="ChiliButton" Content="Chili" HorizontalAlignment="Left" Margin="254,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="ChiliButton_Click"/>
-                <Button x:Name="EWIIButton" Content="EWII" HorizontalAlignment="Left" Margin="531,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="EWIIButton_Click" />
-                <Button x:Name="EnergiFynButton" Content="EnergiFyn" HorizontalAlignment="Left" Margin="254,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="EnergiFynButton_Click"/>
-                <Button x:Name="FlatPayButton" Content="FlatPay" HorizontalAlignment="Left" Margin="531,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="FlatPlayButton_Click"/>
-                <Rectangle HorizontalAlignment="Left" Height="444" Margin="-14,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
-                <Image x:Name="ChiliLogo" HorizontalAlignment="Left" Height="100" Margin="21,10,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
-            </Grid>
-        </TabItem>
-        <TabItem x:Name="AdminTab" Header="Admin" Margin="72,300,-112,-304">
-            <Grid Margin="0,-15,0,-2">
-                <Label x:Name="GuideNameLabel" Content="Guide Navn:" HorizontalAlignment="Left" Margin="200,44,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="GuideName" HorizontalAlignment="Left" Margin="200,102,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Label x:Name="FileLocationLabel" Content="Fil Lokation" HorizontalAlignment="Left" Margin="200,174,0,0" VerticalAlignment="Top" Foreground="White"/>
-                <TextBox x:Name="FilePath" HorizontalAlignment="Left" Margin="200,200,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Width="300"/>
-                <Button x:Name="FileExplorerOpenButton" Content="Vælg fil" HorizontalAlignment="Left" Margin="200,223,0,0" VerticalAlignment="Top" Click="FileExplorerOpenButton_Click" Width="100"/>
-                <Button x:Name="FileUploadButton" Content="Upload" HorizontalAlignment="Left" Margin="400,223,0,0" VerticalAlignment="Top" Width="100" Click="FileUploadButton_Click"/>
-                <Rectangle HorizontalAlignment="Left" Height="432" Margin="-14,22,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
-                <Image x:Name="ChiliLogo_Copy" HorizontalAlignment="Left" Height="100" Margin="21,20,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
-                <ComboBox x:Name="GuideCategoryComboBox" HorizontalAlignment="Left" Margin="200,147,0,0" VerticalAlignment="Top" Width="300" SelectionChanged="ComboBox_SelectionChanged">
-                    <ComboBoxItem>Chili</ComboBoxItem>
-                    <ComboBoxItem>EWII</ComboBoxItem>
-                    <ComboBoxItem>EnergiFyn</ComboBoxItem>
-                    <ComboBoxItem>FlatPay</ComboBoxItem>
-                </ComboBox>
-            </Grid>
-        </TabItem>
-    </TabControl>
+    <Grid>
+        <TabControl x:Name="TabController" TabStripPlacement="Left" Margin="-59,0,0,0">
+            <TabControl.Background>
+                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
+                    <GradientStop Color="Black"/>
+                    <GradientStop Color="#e21643" Offset="1"/>
+                </LinearGradientBrush>
+            </TabControl.Background>
+            <TabItem x:Name="HomeTab" Header="Hjem" Margin="74,162,-112,-162">
+                <Grid Margin="0,-5,0,-2">
+                    <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="436,29,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
+                    <Button x:Name="ChiliButton" Content="Chili" HorizontalAlignment="Left" Margin="254,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="ChiliButton_Click"/>
+                    <Button x:Name="EWIIButton" Content="EWII" HorizontalAlignment="Left" Margin="531,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="EWIIButton_Click" />
+                    <Button x:Name="EnergiFynButton" Content="EnergiFyn" HorizontalAlignment="Left" Margin="254,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="EnergiFynButton_Click"/>
+                    <Button x:Name="FlatPayButton" Content="FlatPay" HorizontalAlignment="Left" Margin="531,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="FlatPlayButton_Click"/>
+                    <Rectangle HorizontalAlignment="Left" Height="444" Margin="-14,10,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
+                    <Image x:Name="ChiliLogo" HorizontalAlignment="Left" Height="100" Margin="21,10,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
+                </Grid>
+            </TabItem>
+            <TabItem x:Name="AdminTab" Header="Admin" Margin="72,300,-112,-304">
+                <Grid Margin="0,-15,0,-2">
+                    <Rectangle HorizontalAlignment="Left" Height="432" Margin="-14,22,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
+                    <Image x:Name="ChiliLogo_Copy" HorizontalAlignment="Left" Height="100" Margin="21,20,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
+                    <Button x:Name="uploadGuideButton" Content="Upload" HorizontalAlignment="Left" Margin="207,100,0,0" VerticalAlignment="Top" Click="uploadGuideButton_Click" Height="56" Width="200"/>
+                    <Button x:Name="updateOrDeleteGuideButton" Content="Update or Delete" HorizontalAlignment="Left" Margin="207,167,0,0" VerticalAlignment="Top" Click="updateOrDeleteGuideButton_Click" Height="56" Width="200"/>
+                    <Label Content="Guides:" HorizontalAlignment="Left" Margin="207,58,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="24"/>
+                </Grid>
+            </TabItem>
+        </TabControl>
+    </Grid>
 </Window>
