--- a/ElearningApp/ElearningApp/View/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/View/MainWindow.xaml
@@ -22,36 +22,8 @@
             <Button Content="Admin" Click="AdminPage_Click" FontSize="24"/>
         </StackPanel>
         <Frame x:Name="MainPage" Margin="350,0,0,0" NavigationUIVisibility="Hidden"/>
-        <Image x:Name="ChiliLogo"  Margin="22,0,1557,777" Source="/Images/ChiliSecurityLogo.png"/>
-
-
-
-        <!--<TabControl x:Name="TabController" TabStripPlacement="Left" Margin="-59,0,0,0">
-            <TabControl.Background>
-                <LinearGradientBrush EndPoint="0.5,1" StartPoint="0.5,0">
-                    <GradientStop Color="Black"/>
-                    <GradientStop Color="#e21643" Offset="1"/>
-                </LinearGradientBrush>
-            </TabControl.Background>
-            <TabItem x:Name="HomeTab" Header="Hjem" Margin="74,162,-112,-162">
-                <Grid Margin="0,-5,0,-2">
-                    <Label x:Name="HomeTabGuideHeaderLabel" Content="Guides" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="436,29,0,0" Foreground="White" FontWeight="Bold" FontSize="24"/>
-                    <Button x:Name="ChiliButton" Content="Chili" HorizontalAlignment="Left" Margin="254,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="CategoryButton_Click"/>
-                    <Button x:Name="EWIIButton" Content="EWII" HorizontalAlignment="Left" Margin="531,128,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="CategoryButton_Click" />
-                    <Button x:Name="EnergiFynButton" Content="EnergiFyn" HorizontalAlignment="Left" Margin="254,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="CategoryButton_Click"/>
-                    <Button x:Name="FlatPayButton" Content="FlatPay" HorizontalAlignment="Left" Margin="531,298,0,0" VerticalAlignment="Top" Height="75" Width="175" Background="White" Click="CategoryButton_Click"/>
-                    <Image x:Name="ChiliLogo" HorizontalAlignment="Left" Height="100" Margin="21,10,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
-                </Grid>
-            </TabItem>
-            <TabItem x:Name="AdminTab" Header="Admin" Margin="72,300,-112,-304">
-                <Grid Margin="0,-15,0,-2">
-                    <Rectangle HorizontalAlignment="Left" Height="432" Margin="-14,22,0,0" Stroke="Black" VerticalAlignment="Top" Width="154" Fill="Black"/>
-                    <Image x:Name="ChiliLogo_Copy" HorizontalAlignment="Left" Height="100" Margin="21,20,0,0" VerticalAlignment="Top" Width="100" Source="/Images/ChiliSecurityLogo.png"/>
-                    <Button x:Name="uploadGuideButton" Content="Upload" HorizontalAlignment="Left" Margin="207,100,0,0" VerticalAlignment="Top" Click="UploadGuideButton_Click" Height="56" Width="200"/>
-                    <Button x:Name="updateOrDeleteGuideButton" Content="Update or Delete" HorizontalAlignment="Left" Margin="207,167,0,0" VerticalAlignment="Top" Click="UpdateOrDeleteGuideButton_Click" Height="56" Width="200"/>
-                    <Label Content="Guides:" HorizontalAlignment="Left" Margin="207,58,0,0" VerticalAlignment="Top" Foreground="White" FontWeight="Bold" FontSize="24"/>
-                </Grid>
-            </TabItem>
-        </TabControl>-->
+        <Grid Margin="0,0,1575,777">
+            <Image x:Name="ChiliLogo"  Margin="50,0,0,0" Source="/Images/ChiliSecurityLogo.png"/>
+        </Grid>
     </Grid>
 </Window>
