--- a/ElearningApp/ElearningApp/View/MainWindow.xaml
+++ b/ElearningApp/ElearningApp/View/MainWindow.xaml
@@ -19,11 +19,17 @@
         <StackPanel Margin="0,206,1200,0">
             <Button Content="Home" Click="HomePage_Click" FontSize="24"/>
             <Button Content="Guides" Click="GuidesPage_Click" FontSize="24"/>
-            <Button Content="Admin" Click="AdminPage_Click" FontSize="24"/>
+            <Button x:Name="AdminPageTabControle" Content="Admin" Click="AdminPage_Click" FontSize="24" Visibility="Hidden"/>
         </StackPanel>
         <Frame x:Name="MainPage" Margin="240,0,0,0" NavigationUIVisibility="Hidden" Width="1200"/>
         <Grid Margin="-11,0,1200,678">
             <Image x:Name="ChiliLogo"  Margin="50,0,0,0" Source="/Images/ChiliSecurityLogo.png"/>
         </Grid>
+        <Button x:Name="LeaderChoiceButton" Content="Leader" HorizontalAlignment="Left" Margin="430,0,0,0" VerticalAlignment="Center" Height="135" Width="240" Click="LeaderChoiceButton_Click"/>
+        <Button x:Name="EmployeeChoiceButton" Content="Employee" HorizontalAlignment="Left" Margin="1014,370,0,0" VerticalAlignment="Top" Height="135" Width="240" Click="EmployeeChoiceButton_Click"/>
+        <Label x:Name="Welcome_Label" Content="Welcome to Chili Security&#xD;&#xA;         E-Learning App&#xD;&#xA;" HorizontalAlignment="Left" Margin="550,49,0,0" VerticalAlignment="Top" Foreground="White" FontSize="48" FontWeight="Bold" Height="157" Width="680"/>
+        <Label x:Name="RoleChoiceLbl" Content="Choose your role" HorizontalAlignment="Left" Margin="692,261,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Foreground="#FFFFFEFE"/>
+        <Label x:Name="NewRoleChoiceLbl" Content="Press button to make new role" HorizontalAlignment="Left" Margin="608,261,0,0" VerticalAlignment="Top" FontSize="36" FontWeight="Bold" Foreground="#FFFFFEFE"/>
+        <Button x:Name="TakeNewRoleBtn" Content="Choose new Role" HorizontalAlignment="Left" Margin="720,370,0,0" VerticalAlignment="Top" Height="135" Width="240" Click="TakeNewRoleBtn_Click" />
     </Grid>
 </Window>
